# HAR-using-smartphone-sensors

./: LSTM_test.csv  app.py  classical_test.csv  har_classification.py  phase1_har.py  phase2.py  phase2_har.py  pyproject.toml  streamlit_link.txt
models/: lstm_model.keras  scaler_lstm.pkl
new_deployment/: deployment_RF.py  deployment_SGD.py
streamlit/: SGD_model.pkl  app.py  pca.pkl  requirements.txt
