[project]
name = "har-using-smartphone-sensors-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.1",
    "tensorflow>=2.20.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

